# habr_project

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py
habr/: admin.py  apps.py  async_parser.py  models.py  services.py  tasks.py
habr/management/commands/: createadminuser.py  runhabrparser.py
habr/migrations/: 0001_initial.py
