[tool.poetry]
name = "habr-project"
version = "0.1.0"
description = ""
authors = ["Blagovest Nedkov <purechromas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = ">=4.0,<5.0"
celery = "^5.3.6"
redis = "^5.0.1"
django-celery-beat = "^2.5.0"
psycopg2-binary = "^2.9.9"
httpx = "^0.26.0"
beautifulsoup4 = "^4.12.2"
python-dotenv = "^1.0.0"
lxml = "^4.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
